fix badge alignment on dashboard view

--- a/react/src/scss/main.scss
+++ b/react/src/scss/main.scss
@@ -131,7 +131,7 @@ main {
       display: flex;
       flex-direction: row;
       flex-wrap: wrap;
-      justify-content: space-between;
+      justify-content: flex-start;
       li.badge {
         background-color: rgba(0, 0, 0, 0);
         padding: 0;
